Added User Authentication
