# src/controllers/Auth/AuthController.ts
@@ -2,10 +2,11 @@
 // Last Modified Date: 12-12-2023
 
 import { Request, Response } from "express";
-import { UserAttributes } from "../../models/User/User";
-import AuthService from "../../services/Auth/AuthService";
+import { UserAttributes } from "models";
+import { AuthService } from "services";
 
 class AuthController {
+  // Controller: Create a new user
   static async createUser(req: Request, res: Response) {
     try {
       const user: UserAttributes = await AuthService.createUser(req.body);
@@ -18,7 +19,7 @@ class AuthController {
       }
     }
   }
-
+  // Controller: Get a user by ID
   static async getUserById(req: Request, res: Response) {
     try {
       const userId = Number(req.params.id);
@@ -32,7 +33,7 @@ class AuthController {
       }
     }
   }
-
+  // Controller: Update a user by ID
   static async updateUser(req: Request, res: Response) {
     try {
       const userId = Number(req.params.id);
@@ -46,12 +47,28 @@ class AuthController {
       }
     }
   }
-
+  // Controller: Delete a user by ID
   static async deleteUser(req: Request, res: Response) {
     try {
       const userId = Number(req.params.id);
       await AuthService.deleteUser(userId);
       res.json({ message: "User deleted" });
+    } catch (error: unknown) {
+      if (error instanceof Error) {
+        res.status(500).json({ message: error.message });
+      } else {
+        res.status(500).json({ message: "An unknown error occurred" });
+      }
+    }
+  }
+  // Controller: Login a user
+  static async loginUser(req: Request, res: Response) {
+    try {
+      const user = await AuthService.loginUser({
+        login: req.body.login,
+        password: req.body.password,
+      });
+      res.json(user);
     } catch (error: unknown) {
       if (error instanceof Error) {
         res.status(500).json({ message: error.message });
